--- a/step_3/logstash.conf
+++ b/step_3/logstash.conf
@@ -1,6 +1,6 @@
 input {
     file {
-        path => [ "/sample_logs/apache_sample.log"]
+        path => [ "/apache_sample.log"]
         type => "apache"
         start_position => beginning
     }
